fixed footer spacing and hid related posts section for now

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -95,7 +95,7 @@
 
 .footer a {
   color: $light-gray-color;
-  padding: 10px;
+  /* padding: 10px; */
   text-decoration: none;
 }
 
